--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "scripts": {
       "test": "vitest"
     },
-    "devDependencies": {
-      "vitest": "^1.0.0"
+    "dependencies": {
+      "@googlemaps/js-api-loader": "^1.16.8",
+      "jsdom": "^26.1.0",
+      "vitest": "^3.1.2"
     }
   }
-  
